# total-generalized-variation-stereo-matching-pipeline

./: CMakeLists.txt  README.md
kitti/: disparity-estimate-MC-AC.pgm  disparity-estimate-MC.pgm  disparity-estimate.pgm  ground-truth.pgm  reference.pgm  target.pgm
src/: aggregation-functions.cu  aggregation-functions.h  imageio.cu  imageio.h  logger.cu  logger.h  main.cu  match-functions.cu  match-functions.h  refine-functions.cu  refine-functions.h  selection-functions.cu  selection-functions.h  smooth-functions.cu  smooth-functions.h  stereo-matching.cu  stereo-matching.h
